[package]
name = "bluetool"
version = "0.1.0"
edition = "2021"
authors = ["Max Lafrance maxlafrance97@gmail.com"]
description = "TUI bluetooth device manager"
license = "MIT"
repository = "https://github.com/mdlafrance/bluetool"

[dependencies]
bluer = { version = "0.17.3", features = ["full"] }
color-eyre = "0.6.3"
env_logger = "0.11.6"
futures = "0.3.31"
parking_lot = "0.12.3"
ratatui = "0.29.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
crossterm = { version = "0.28.0", features = ["event-stream"] }
anyhow = "1.0.95"
scopeguard = "1.2.0"
better-panic = "0.3.0"
